# relaty

./: Cargo.toml  README.md
src/: cli.rs  commands.rs  entry_struct.rs  error.rs  main.rs  rate_vec.rs  rel_vec.rs  storage.rs  vote.rs
src/commands/: mod.rs
