[package]
name = "relaty"
version = "0.1.0"
authors = ["Lichthagel <lichthagel@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0.117"
serde_derive = "1.0.117"
bincode = "1.3.1"
rand = "0.7.3"
regex = "1.4.2"