[package]
name = "relaty"
version = "0.1.1"
authors = ["Lichthagel <lichthagel@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.63"
rand = "0.8.3"
regex = "1.4.3"